--- a/src/components/characters.scss
+++ b/src/components/characters.scss
@@ -29,7 +29,7 @@
         &-list {
             max-width: 480px;
             justify-content: space-between;
-            display: flex; 
+            display: flex;
         }
 
         &-btn {
@@ -55,31 +55,10 @@
                 z-index: -100;
             }
 
-            // &::after {
-            //     position: absolute;
-            //     display: none;
-            //     content: '';
-            //     bottom: -40%;
-            //     left: 0;
-            //     width: 100%;
-            //     height: 6px;
-            //     background-color: #00b0c8;
-            //     border-bottom-left-radius: 15px;
-            //     border-bottom-right-radius: 15px;
-            // }
-
-            // &:first-child::after {
-            //     display: block;
-            // }
-
             &:hover::before {
                 opacity: 1;
                 transform: scale3d(1.7, 1.7, 1);
             }
-
-            // &:hover::after {
-            //     display: block;
-            // }
         }
     }
 
@@ -160,6 +139,24 @@
             }
         }
     }
+}
+
+.characters__selectors-btn.active {
+    color: #838383;
+    display: inline-block;
+    border-bottom: 2px solid #080808;
+    // &::after {
+    //     position: absolute;
+    //     display: none;
+    //     content: '';
+    //     bottom: -40%;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 6px;
+    //     background-color: #00b0c8;
+    //     border-bottom-left-radius: 15px;
+    //     border-bottom-right-radius: 15px;
+    // }
 }
 
 @media (max-width: 1250px) {
