--- a/src/components/characters.scss
+++ b/src/components/characters.scss
@@ -11,7 +11,7 @@
         font-size: 45px;
         font-weight: 800;
         text-transform: uppercase;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
 
         &::after {
             position: absolute;
@@ -25,9 +25,11 @@
     }
 
     &__selectors {
-        
+
         &-list {
             max-width: 480px;
+            flex-grow: 2;
+            align-self: center;
             justify-content: space-between;
             display: flex;
         }
@@ -68,7 +70,7 @@
     }
 
     &__list {
-        margin-top: 50px;
+        margin-top: 25px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
@@ -90,7 +92,6 @@
             &:hover {
                 border: 4px solid #00b0c8;
                 background-image: url("https://wallpaperscave.ru/images/thumbs/wp-preview/800x500/18/03-19/tv-series-rick-and-morty-31052.jpg");
-                // background-size: cover;
                 background-position: 5% 75%;
                 background-repeat: no-repeat;
                 color: #ffffff;
@@ -145,18 +146,6 @@
     color: #838383;
     display: inline-block;
     border-bottom: 2px solid #080808;
-    // &::after {
-    //     position: absolute;
-    //     display: none;
-    //     content: '';
-    //     bottom: -40%;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 6px;
-    //     background-color: #00b0c8;
-    //     border-bottom-left-radius: 15px;
-    //     border-bottom-right-radius: 15px;
-    // }
 }
 
 @media (max-width: 1250px) {
