--- a/src/components/characters.scss
+++ b/src/components/characters.scss
@@ -1,3 +1,5 @@
+@import '../scss/vars.scss';
+
 .characters {
 
     &__inner {
@@ -7,7 +9,7 @@
     &__title {
         position: relative;
         display: inline-block;
-        color: #080808;
+        color: $secondary-color;
         font-size: 45px;
         font-weight: 800;
         text-transform: uppercase;
@@ -20,7 +22,7 @@
             height: 2px;
             bottom: -25%;
             left: 0;
-            background-color: #00b0c8;
+            background-color: $base-color;
         }
     }
 
@@ -38,7 +40,7 @@
             position: relative;
             font-size: 16px;
             font-weight: 600;
-            color: #080808;
+            color: $secondary-color;
             text-transform: uppercase;
             cursor: pointer;
             z-index: 100;
@@ -65,7 +67,7 @@
     }
 
     &__empty-title {
-        color: #080808;
+        color: $secondary-color;
         margin-top: 50px;
     }
 
@@ -83,14 +85,14 @@
             align-items: center;
             max-width: 420px;
             min-height: 180px;
-            border: 4px solid #080808;
+            border: 4px solid $secondary-color;
             border-radius: 10px;
             padding: 8px;
             transition: all 0.2s ease;
-            color: #080808;
+            color: $secondary-color;
 
             &:hover {
-                border: 4px solid #00b0c8;
+                border: 4px solid $base-color;
                 background-image: url("https://wallpaperscave.ru/images/thumbs/wp-preview/800x500/18/03-19/tv-series-rick-and-morty-31052.jpg");
                 background-position: 5% 75%;
                 background-repeat: no-repeat;
@@ -103,7 +105,7 @@
                     width: 150px;
                     height: auto;
                     border-radius: 50%;
-                    border: 2px solid #080808;
+                    border: 2px solid $secondary-color;
                 }
             }
 
@@ -134,7 +136,7 @@
                     }
 
                     &>sup.unknown {
-                        color: rgb(158, 158, 158)
+                        color: $inactive-color
                     }
                 }
             }
@@ -143,9 +145,9 @@
 }
 
 .characters__selectors-btn.active {
-    color: #838383;
+    color: $inactive-color;
     display: inline-block;
-    border-bottom: 2px solid #080808;
+    border-bottom: 2px solid $secondary-color;
 }
 
 @media (max-width: 1250px) {
